--- a/css/style.css
+++ b/css/style.css
@@ -403,11 +403,14 @@ footer i{
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
+    margin-top: -8em;
+    position: relative;
 }
 
 .img_restau{
     object-fit: cover;
     width: 100%;
+    height: 25em;
 }
 
 .française .fa-solid{
@@ -440,6 +443,11 @@ footer i{
     font-weight: 300;
 }
 
+.composition_restau{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .composition_restau h3{
     margin-top: 2em;
     margin-bottom: 1em;
@@ -461,6 +469,8 @@ footer i{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
     margin: 1em 0;
     border-radius: 1em;
@@ -468,8 +478,22 @@ footer i{
 
 .detail{
     padding: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
+.detail h4{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.detail p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .detail>h4,p{
     margin: 0;
 }
@@ -529,9 +553,6 @@ footer i{
 @keyframes apparence{
     0%{
         transform: scale(0);
-    }
-    25%{
-        transform: scale(0.2);
     }
     50%{
         transform: scale(0.5);
@@ -596,40 +617,39 @@ footer i{
 @media screen and (min-width: 768px){
     .img_restau{
         width:100%;
-        height: auto; 
+        height: 40em; 
     }
 
-    .restau_menu{
-        padding: 0.5em;
-        border-radius: 0;
+    .restau_menu h3{
+        font-size: 1em;
     }
     .composition_restau{
         display: flex;
-        height: 15em;
-    }
-    .composition_restau h3{
-        font-size: 0.9em;
+        height: 20em;
     }
     .categorie_repas{
-        width: 40%;
-        transform: translateY(25%);
+        width: 33%;
+        transform: translateY(20%);
+        font-size: 0.8em;
     }
-    .commande{
-        padding-top: 5em;
-    }
+
 }
 
 @media screen and (min-width: 992px){
 
     .img_restau{
-        height: 30em;
+        height: 40em;
     }
     .composition_restau{
         width: 100%;
+        height: 20em;
+        padding-right: 0;
     }
 
     .restau_menu{
         padding: 1em;
+        border-radius: 0;
+        height: 40em;
     }
 
     .française h2{
@@ -643,17 +663,22 @@ footer i{
 
 
 /*La note enchantée*/
+header i{
+    display: inline-flex;
+}
 .Note_menu{
     padding: 0 1em;
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
+    margin-top: -8em;
+    position: relative;
 }
 
 .img{
     object-fit: cover;
     width: 100%;
-    height: 18em;
+    height: 25em;
 }
 
 .enchante .fa-solid{
@@ -703,10 +728,18 @@ footer i{
     position: absolute;
 }
 
+.categorie{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .groupe{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
     margin-bottom: 1em;
     border-radius: 1em;
@@ -714,8 +747,23 @@ footer i{
 
 .detail_repas{
     padding: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
+.detail_repas h4{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.detail_repas p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+}
 .detail_repas>h4,p{
     margin: 0;
 }
@@ -770,11 +818,31 @@ footer i{
     }
 }
 
+
+.categorie{
+    animation: apparence 2s;
+}
+
+@keyframes apparence{
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(0.5);
+    }
+    75%{
+        transform: scale(0.8);
+    }
+    100%{
+        transform: scale(1);
+    }
+    
+}
 /*commande*/
 .commandez{
     text-align: center;
-    height: 10em;
-    padding-top: 3em;
+    height: 7em;
+    margin-top: 3em;
 }
 
 .commandez button{
@@ -822,47 +890,48 @@ footer i{
 @media screen and (min-width: 768px){
     .img{
         width:100%;
-        height: auto; 
+        height: 40em; 
     }
-
-    .Note_menu{
-        padding: 0.5em;
-        border-radius: 0;
-    }
+     
     .menu_restau{
         display: flex;
-        height: 15em;
+        height: 20em;
     }
     .menu_restau h3{
-        font-size: 0.9em;
+        font-size: 1em;
     }
     .categorie{
-        width: 40%;
-        transform: translateY(25%);
+        width: 33%;
+        transform: translateY(20%);
+        font-size: 0.8em;
     }
-    .commandez{
-        padding-top: 5em;
-    }
+
+
 }
 
 @media screen and (min-width: 992px){
 
     .img{
-        height: 50em;
+        height: 40em;
     }
     .menu_restau{
         width: 100%;
+        height: 20em;
+        padding-right: 0;
     }
 
     .Note_menu{
         padding: 1em;
+        border-radius: 0;
+        height: 40em;
     }
 
     .enchante h2{
         padding-top: 0;
     }
     .commandez{
-        margin-top: 2.5em;
+        margin-bottom: 3em;
+        height: auto;
     }
 }
 
@@ -874,6 +943,8 @@ footer i{
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
+    margin-top: -8em;
+    position: relative;
 }
 
 .img_palette{
@@ -911,7 +982,6 @@ footer i{
     font-family: "Shrikhand",cursive;
     padding-top: 2em;
     font-weight: 300;
-    position: relative;
 }
 
 .different_menu h3{
@@ -931,19 +1001,40 @@ footer i{
     position: absolute;
 }
 
+.resto_palette{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .composition{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
     margin-bottom: 1em;
     border-radius: 1em;
+    font-size: 0.9em;
 }
 
 .liste_repas{
     padding: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
+.liste_repas h4{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.liste_repas p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .liste_repas>h4,p{
     margin: 0;
 }
@@ -998,10 +1089,29 @@ footer i{
     }
 }
 
+.composition{
+    animation: apparence 2s;
+}
+
+@keyframes apparence{
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(0.5);
+    }
+    75%{
+        transform: scale(0.8);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
 /*commande*/
 .choix_commande{
     text-align: center;
-    height: 10em;
+    height: 7em;
     padding-top: 3em;
 }
 
@@ -1051,47 +1161,47 @@ footer i{
 @media screen and (min-width: 768px){
     .img_palette{
         width:100%;
-        height: auto; 
+        height: 40em; 
     }
 
-    .restaurants{
-        padding: 0.5em;
-        border-radius: 0;
-    }
     .different_menu{
         display: flex;
-        height: 15em;
+        height: 20em;
     }
     .different_menu h3{
-        font-size: 0.9em;
+        font-size: 1em;
     }
     .resto_palette{
-        width: 40%;
-        transform: translateY(25%);
+        width: 30%;
+        transform: translateY(20%);
+        font-size: 0.9em;
     }
-    .choix_commande{
-        padding-top: 5em;
-    }
+
 }
 
 @media screen and (min-width: 992px){
 
     .img_palette{
-        height: 50em;
+        height: 40em;
     }
     .different_menu{
         width: 100%;
+        height: 25em;
+        padding-right: 0;
     }
 
     .restaurants{
         padding: 1em;
+        border-radius: 0;
+        height: 40em;
     }
 
     .Palette h2{
         padding-top: 0;
     }
     .choix_commande{
-        margin-top: 2.5em;
+        margin-bottom: 5em;
+        height: auto;
     }
 }
 
@@ -1103,6 +1213,8 @@ footer i{
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
+    margin-top: -8em;
+    position: relative;
 }
 
 .img_delice{
@@ -1113,7 +1225,7 @@ footer i{
 
 .delice .fa-solid{
     transform: translateY(-200%); 
-    right: 5%;
+    right: 3%;
     position: absolute;
     font-size: 1.5em;
     color: transparent;
@@ -1127,7 +1239,7 @@ footer i{
 .delice .fa-regular{
      font-size: 1.5em;
      position: absolute;
-     right: 5%; 
+     right: 3%; 
      transform:  translateY(-200%);  
   }
   
@@ -1158,19 +1270,42 @@ footer i{
     position: absolute;
 }
 
+.categorie_menu{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .liste_menu{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
     margin-bottom: 1em;
     border-radius: 1em;
+    font-size: 0.9em;
 }
 
 .repas_liste{
     padding: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
+
+.repas_liste p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.repas_liste h4{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .repas_liste>h4,p{
     margin: 0;
 }
@@ -1225,10 +1360,29 @@ footer i{
     }
 }
 
+
+.categorie_menu{
+    animation: apparence 2s;
+}
+
+@keyframes apparence{
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(0.5);
+    }
+    75%{
+        transform: scale(0.8);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
 /*commande*/
 .commande_delice{
     text-align: center;
-    height: 10em;
+    height: 7em;
     padding-top: 3em;
 }
 
@@ -1273,29 +1427,38 @@ footer i{
 .footer_delice i{
     margin-right: 1em;
 }
+
 @media screen and (min-width: 768px){
     .img_delice{
         width:100%;
-        height: auto; 
+        height: 40em; 
     }
-
+    
+    .delice h2{
+        margin-bottom: 2em;
+    }
     .restau_delice{
         padding: 0.5em;
         border-radius: 0;
     }
     .composition_menu{
         display: flex;
-        height: 15em;
+        height: 20em;
     }
     .composition_menu h3{
         font-size: 0.9em;
+        margin: 0;
     }
     .categorie_menu{
-        width: 40%;
-        transform: translateY(25%);
+        width: 33%;
+        font-size: 0.9em;
+    }
+
+    .categorie_menu p{
+        font-size: 0.8em;
     }
     .commande_delice{
-        padding-top: 5em;
+        margin-bottom: 3em;
     }
 }
 
@@ -1303,21 +1466,23 @@ footer i{
 @media screen and (min-width: 992px){
 
     .img_delice{
-        height: 50em;
+        height: 40em;
     }
     .composition_menu{
         width: 100%;
+        height: 15em;
     }
 
     .restau_delice{
         padding: 1em;
+        border-radius: 0;
     }
 
     .delice h2{
         padding-top: 0;
     }
     .commande_delice{
-        margin-top: 2.5em;
+        margin-bottom: 3em;
     }
 
 }
