--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ body{
 
 
 header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 4em;
     font-family: "Shrikhand",cursive;
     text-align: center;
@@ -161,29 +164,27 @@ h1{
 .card_menu{
     width: 100%;
     height: 14em;
+    margin-bottom: 2em;
     background-color: #ffffff;
     box-shadow: 20px 10px 10px 25px #f2f2f2;
     border-radius: 15px 15px 15px 15px;
     text-decoration: none;
     color: black;
+    position: relative;
 }
 
 .menus h2{
     font-size: 1.2em;
-    margin: 0;
+
 }
 
-.bloc_menus1{
+.bloc_menus{
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.bloc_menus2{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+
 
 /*description*/
 .description{
@@ -237,9 +238,10 @@ h1{
     justify-content: center;
     color:  #13433f;
     background-color: #99E2Dc;
-    transform: translateY(150%);
-    margin-left: auto;
-    margin-right: 1em;
+    position: absolute;
+    top: 15px;
+    right: 30px;
+    
 }
 
 .loader{
@@ -252,7 +254,6 @@ h1{
     position: fixed;
     inset: 0;
     z-index: 1;
-    opacity: 0.5;
     animation: disparaitre 1s 6s forwards;
 }
 
@@ -291,7 +292,7 @@ h1{
 
 /*footer*/
 footer{
-    height: 10em;
+    height: 11em;
     background-color: #353539;
     color: #ffffff;
     padding-left: 0.5em;
@@ -304,14 +305,14 @@ footer h2{
     margin-bottom: 0.6em;
 }
 footer p{
-    font-size: 0.7em;
+    font-size: 0.9em;
     margin: 0.5em;
 }
 
 footer a{
     text-decoration: none;
     color:#ffffff;
-    font-size: 0.7em;
+    font-size: 0.9em;
 }
 
 footer i{
@@ -355,14 +356,18 @@ footer i{
 
     .menus{
        height: 42em;
-       padding-right: 5em;
+       margin-top: 2em;
     }
 
+    .menus h2{
+        margin-bottom: 2em;
+    }
     .card_menu{
-        width: 60%;
+        width: 45%;
+        margin-right: 2em;
     }
 
-    .bloc_menus1{
+    .bloc_menus{
         display: flex;
         flex-direction: row;
     }
@@ -381,25 +386,59 @@ footer i{
         margin-top: 2em;
     }
 
-    .nouveau{
-        display:flex;
-        right: 5%;
-        transform: translateX(450%);
-        margin-top: auto;
-        
-    }
-
     .menus h2{
        margin-left: 5em;
        margin-top: 2em;
    }
    
 }
+/*Pages menus*/
+header i{
+    position: absolute;
+    display: flex;
+    left: 28px;
+    top: 20px;
+    color: #000000;
+    font-size: 1em;
+    font-weight: 900;
+}
 
+@keyframes rotatecheck{
+    0%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(0);
+    }
+}
+
+.delay-1{
+    animation: apparence 1s both;
+}
+
+.delay-2{
+    animation: apparence 2s both;
+}
+
+.delay-3{
+    animation: apparence 3s both;
+}
+
+.delay-4{
+    animation: apparence 4s both;
+}
+
+@keyframes apparence{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }   
+}
 
 /*A la française*/
 .restau_menu{
-    padding: 0 1em;
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
@@ -416,7 +455,7 @@ footer i{
 .française .fa-solid{
     font-size: 1.5em;
     position: absolute;
-    right: 3%;
+    right: 8%;
     transform: translateY(-200%); 
     color: transparent;
     background-image: linear-gradient(0deg, rgb(147,86,220,1),rgb(255,121,218,1));
@@ -428,7 +467,7 @@ footer i{
 .française .fa-regular{
      font-size: 1.5em;
      position: absolute;
-     right: 3%; 
+     right: 8%; 
      transform:  translateY(-200%)   
   }
   
@@ -441,21 +480,17 @@ footer i{
     font-family: "Shrikhand",cursive;
     padding-top: 1.5em;
     font-weight: 300;
+    margin-left: 0.5em;
 }
 
-.composition_restau{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-.composition_restau h3{
-    margin-top: 2em;
-    margin-bottom: 1em;
+.categorie_repas h3{
+    margin-top: 1.5em;
+    margin-left: 0.5em;
     font-weight: 300;
     position: relative;
 }
 
-.composition_restau h3::after{
+.categorie_repas h3::after{
     content: attr(f86c);
     height: 0.2em;
     width: 1.7em;
@@ -471,9 +506,10 @@ footer i{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
-    margin: 1em 0;
+    box-shadow: 2px 1px 8px -3px #000000;
+    margin: 1em;
     border-radius: 1em;
+    font-size: 0.9em;
 }
 
 .detail{
@@ -483,16 +519,14 @@ footer i{
     white-space: nowrap;
 }
 
-.detail h4{
+.detail h4 ,p{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
 .detail p{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    font-size: 0.8em;
 }
 .detail>h4,p{
     margin: 0;
@@ -537,39 +571,11 @@ footer i{
     animation: rotatecheck 1s ease-in-out;
 }
 
-@keyframes rotatecheck{
-    0%{
-        transform: rotate(270deg);
-    }
-    100%{
-        transform: rotate(0);
-    }
-}
-
-.categorie_repas{
-    animation: apparence 2s;
-}
-
-@keyframes apparence{
-    0%{
-        transform: scale(0);
-    }
-    50%{
-        transform: scale(0.5);
-    }
-    75%{
-        transform: scale(0.8);
-    }
-    100%{
-        transform: scale(1);
-    }
-    
-}
 /*commande*/
 .commande{
     text-align: center;
-    height: 10em;
-    padding-top: 3em;
+    height: 7em;
+    margin-top: 3em;
 }
 
 .commande button{
@@ -587,9 +593,11 @@ footer i{
 
 /*footer français*/
 .footer_français{
-    height: 10em;
+    height: 11em;
     background-color: #353539;
     color: #ffffff;
+    padding-left: 1.5em;
+    padding-top: 0.1em;
 }
 
 .footer_français h2{
@@ -598,22 +606,21 @@ footer i{
     margin-bottom: 0.6em;
 }
 .footer_français p{
-    font-size: 0.7em;
+    font-size: 0.9em;
     margin: 0.5em;
 }
 
 .footer_français a{
     text-decoration: none;
     color:#ffffff;
-    font-size: 0.7em;
+    font-size: 0.9em;
 }
 
 .footer_français i{
     margin-right: 1em;
 }
    
-
-/*responsives à la française*/
+/*responsives a la française*/
 @media screen and (min-width: 768px){
     .img_restau{
         width:100%;
@@ -625,49 +632,30 @@ footer i{
     }
     .composition_restau{
         display: flex;
-        height: 20em;
+        justify-content: center;
     }
     .categorie_repas{
-        width: 33%;
-        transform: translateY(20%);
-        font-size: 0.8em;
+        min-width: 33%;
     }
 
+    .française h2{
+        padding-top: 1em;
+    }
 }
 
 @media screen and (min-width: 992px){
-
     .img_restau{
         height: 40em;
-    }
-    .composition_restau{
-        width: 100%;
-        height: 20em;
-        padding-right: 0;
     }
 
     .restau_menu{
         padding: 1em;
-        border-radius: 0;
-        height: 40em;
-    }
-
-    .française h2{
-        padding-top: 0;
-    }
-
-    .commande{
-        margin-top: 2.5em;
     }
 }
 
 
 /*La note enchantée*/
-header i{
-    display: inline-flex;
-}
 .Note_menu{
-    padding: 0 1em;
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
@@ -683,7 +671,7 @@ header i{
 
 .enchante .fa-solid{
     transform: translateY(-200%); 
-    right: 3%;
+    right: 8%;
     position: absolute;
     font-size: 1.5em;
     color: transparent;
@@ -697,7 +685,7 @@ header i{
 .enchante .fa-regular{
      font-size: 1.5em;
      position: absolute;
-     right: 3%; 
+     right: 8%; 
      transform:  translateY(-200%); 
   }
   
@@ -710,15 +698,16 @@ header i{
     font-family: "Shrikhand",cursive;
     padding-top: 2em;
     font-weight: 300;
+    margin-left: 0.5em;
 }
 
-.menu_restau h3{
-    margin-top: 2em;
-    margin-bottom: 1em;
+.categorie h3{
+    margin-top: 1.5em;
+    margin-left: 0.5em;
     font-weight: 300;
     position: relative;
 }
-.menu_restau h3::after{
+.categorie h3::after{
     content: attr(f86c);
     height: 0.2em;
     width: 1.7em;
@@ -728,21 +717,16 @@ header i{
     position: absolute;
 }
 
-.categorie{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
 .groupe{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
-    margin-bottom: 1em;
+    box-shadow: 2px 1px 8px -3px #000000;
+    margin: 1em;
     border-radius: 1em;
+    font-size: 0.9em;
 }
 
 .detail_repas{
@@ -752,17 +736,14 @@ header i{
     white-space: nowrap;
 }
 
-.detail_repas h4{
+.detail_repas h4,p{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
 .detail_repas p{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-
+   font-size: 0.8em;
 }
 .detail_repas>h4,p{
     margin: 0;
@@ -783,7 +764,6 @@ header i{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0 1em 1em 0;
     transition: all 1s;
 }
 
@@ -809,35 +789,6 @@ header i{
     animation: rotatecheck 1s ease-in-out;
 }
 
-@keyframes rotatecheck{
-    0%{
-        transform: rotate(270deg);
-    }
-    100%{
-        transform: rotate(0);
-    }
-}
-
-
-.categorie{
-    animation: apparence 2s;
-}
-
-@keyframes apparence{
-    0%{
-        transform: scale(0);
-    }
-    50%{
-        transform: scale(0.5);
-    }
-    75%{
-        transform: scale(0.8);
-    }
-    100%{
-        transform: scale(1);
-    }
-    
-}
 /*commande*/
 .commandez{
     text-align: center;
@@ -861,9 +812,11 @@ header i{
 
 /*footer enchante*/
 .footer_enchante{
-    height: 10em;
+    height: 11em;
     background-color: #353539;
     color: #ffffff;
+    padding-left: 1.5em;
+    padding-top: 0.1em;
 }
 
 .footer_enchante h2{
@@ -873,14 +826,14 @@ header i{
 }
 
 .footer_enchante p{
-    font-size: 0.7em;
+    font-size: 0.9em;
     margin: 0.5em;
 }
 
 .footer_enchante a{
     text-decoration: none;
     color:#ffffff;
-    font-size: 0.7em;
+    font-size: 0.9em;
 }
 
 .footer_enchante i{
@@ -892,20 +845,22 @@ header i{
         width:100%;
         height: 40em; 
     }
-     
+    
     .menu_restau{
         display: flex;
-        height: 20em;
+        justify-content: center;
+       
     }
     .menu_restau h3{
         font-size: 1em;
     }
     .categorie{
-        width: 33%;
-        transform: translateY(20%);
-        font-size: 0.8em;
+        min-width: 33%;
     }
-
+    
+    .enchante h2{
+        padding-top: 1em;
+    }
 
 }
 
@@ -914,32 +869,17 @@ header i{
     .img{
         height: 40em;
     }
-    .menu_restau{
-        width: 100%;
-        height: 20em;
-        padding-right: 0;
-    }
-
+    
     .Note_menu{
         padding: 1em;
-        border-radius: 0;
-        height: 40em;
     }
-
-    .enchante h2{
-        padding-top: 0;
-    }
-    .commandez{
-        margin-bottom: 3em;
-        height: auto;
-    }
+   
 }
 
 
 
 /*La palette du goût*/
 .restaurants{
-    padding: 0 1em;
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
@@ -950,12 +890,12 @@ header i{
 .img_palette{
     object-fit: cover;
     width: 100%;
-    height: 18em;
+    height: 25em;
 }
 
 .Palette .fa-solid{
     transform: translateY(-200%); 
-    right: 3%;
+    right: 8%;
     position: absolute;
     font-size: 1.5em;
     color: transparent;
@@ -969,7 +909,7 @@ header i{
 .Palette .fa-regular{
      font-size: 1.5em;
      position: absolute;
-     right: 3%; 
+     right: 8%; 
      transform:  translateY(-200%);  
   }
   
@@ -980,18 +920,19 @@ header i{
 
 .Palette h2{
     font-family: "Shrikhand",cursive;
-    padding-top: 2em;
+    padding-top: 1.5em;
     font-weight: 300;
+    margin-left: 0.5em;
 }
 
-.different_menu h3{
-    margin-top: 2em;
-    margin-bottom: 1em;
+.resto_palette h3{
+    margin-top: 1.5em;
+    margin-left: 0.5em;
     font-weight: 300;
     position: relative;
 }
 
-.different_menu h3::after{
+.resto_palette h3::after{
     content: attr(f86c);
     height: 0.2em;
     width: 1.7em;
@@ -1001,19 +942,14 @@ header i{
     position: absolute;
 }
 
-.resto_palette{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
 .composition{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
-    margin-bottom: 1em;
+    box-shadow: 2px 1px 8px -3px #000000;
+    margin: 1em;
     border-radius: 1em;
     font-size: 0.9em;
 }
@@ -1025,15 +961,13 @@ header i{
     white-space: nowrap;
 }
 
-.liste_repas h4{
+.liste_repas h4,p{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 .liste_repas p{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    font-size: 0.8em;
 }
 .liste_repas>h4,p{
     margin: 0;
@@ -1054,7 +988,6 @@ header i{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0 1em 1em 0;
     transition: all 1s;
 }
 
@@ -1080,39 +1013,11 @@ header i{
     animation: rotatecheck 1s ease-in-out;
 }
 
-@keyframes rotatecheck{
-    0%{
-        transform: rotate(270deg);
-    }
-    100%{
-        transform: rotate(0);
-    }
-}
-
-.composition{
-    animation: apparence 2s;
-}
-
-@keyframes apparence{
-    0%{
-        transform: scale(0);
-    }
-    50%{
-        transform: scale(0.5);
-    }
-    75%{
-        transform: scale(0.8);
-    }
-    100%{
-        transform: scale(1);
-    }
-}
-
 /*commande*/
 .choix_commande{
     text-align: center;
     height: 7em;
-    padding-top: 3em;
+    margin-top: 3em;
 }
 
 .choix_commande button{
@@ -1131,9 +1036,11 @@ header i{
 
 /*footer palette*/
 .footer_palette{
-    height: 10em;
+    height: 11em;
     background-color: #353539;
     color: #ffffff;
+    padding-left: 1.5em;
+    padding-top: 0.1em;
 }
 
 .footer_palette h2{
@@ -1143,14 +1050,14 @@ header i{
 }
 
 .footer_palette p{
-    font-size: 0.7em;
+    font-size: 0.9em;
     margin: 0.5em;
 }
 
 .footer_palette a{
     text-decoration: none;
     color:#ffffff;
-    font-size: 0.7em;
+    font-size: 0.9em;
 }
 
 .footer_palette i{
@@ -1166,17 +1073,17 @@ header i{
 
     .different_menu{
         display: flex;
-        height: 20em;
+        justify-content: center;
     }
-    .different_menu h3{
+    .resto_palette h3{
         font-size: 1em;
     }
     .resto_palette{
-        width: 30%;
-        transform: translateY(20%);
-        font-size: 0.9em;
+        min-width: 33%;
     }
-
+    .Palette h2{
+        padding-top: 1em;
+    }
 }
 
 @media screen and (min-width: 992px){
@@ -1184,24 +1091,9 @@ header i{
     .img_palette{
         height: 40em;
     }
-    .different_menu{
-        width: 100%;
-        height: 25em;
-        padding-right: 0;
-    }
 
     .restaurants{
         padding: 1em;
-        border-radius: 0;
-        height: 40em;
-    }
-
-    .Palette h2{
-        padding-top: 0;
-    }
-    .choix_commande{
-        margin-bottom: 5em;
-        height: auto;
     }
 }
 
@@ -1209,7 +1101,6 @@ header i{
 
 /*Le delice des sens*/
 .restau_delice{
-    padding: 0 1em;
     align-items: center;
     background-color: #f6f6f6; 
     border-radius: 30px 30px 0 0;
@@ -1220,12 +1111,12 @@ header i{
 .img_delice{
     object-fit: cover;
     width: 100%;
-    height: 18em;
+    height: 25em;
 }
 
 .delice .fa-solid{
     transform: translateY(-200%); 
-    right: 3%;
+    right: 8%;
     position: absolute;
     font-size: 1.5em;
     color: transparent;
@@ -1250,13 +1141,14 @@ header i{
 
 .delice h2{
     font-family: "Shrikhand",cursive;
-    padding-top: 2em;
+    padding-top: 1.5em;
+    margin-left: 0.5em;
     font-weight: 300;
 }
 
-.composition_menu h3{
-    margin-top: 2em;
-    margin-bottom: 1em;
+.categorie_menu h3{
+    margin-top: 1.5em;
+    margin-left: 0.5em;
     font-weight: 300;
     position: relative;
 }
@@ -1270,19 +1162,14 @@ header i{
     position: absolute;
 }
 
-.categorie_menu{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
 .liste_menu{
     display: flex; 
     background-color: #ffffff;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
-    margin-bottom: 1em;
+    box-shadow:  2px 1px 8px -3px #000000;
+    margin: 0.5em;
     border-radius: 1em;
     font-size: 0.9em;
 }
@@ -1295,16 +1182,14 @@ header i{
 }
 
 
-.repas_liste p{
+.repas_liste h4,p{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.repas_liste h4{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+.repas_liste p{
+    font-size: 0.8em;
 }
 .repas_liste>h4,p{
     margin: 0;
@@ -1325,7 +1210,6 @@ header i{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0 1em 1em 0;
     transition: all 1s;
 }
 
@@ -1351,39 +1235,12 @@ header i{
     animation: rotatecheck 1s ease-in-out;
 }
 
-@keyframes rotatecheck{
-    0%{
-        transform: rotate(270deg);
-    }
-    100%{
-        transform: rotate(0);
-    }
-}
 
-
-.categorie_menu{
-    animation: apparence 2s;
-}
-
-@keyframes apparence{
-    0%{
-        transform: scale(0);
-    }
-    50%{
-        transform: scale(0.5);
-    }
-    75%{
-        transform: scale(0.8);
-    }
-    100%{
-        transform: scale(1);
-    }
-}
 /*commande*/
 .commande_delice{
     text-align: center;
     height: 7em;
-    padding-top: 3em;
+    margin-top: 3em;
 }
 
 .commande_delice button{
@@ -1399,12 +1256,13 @@ header i{
     box-shadow: 0 1px 5px 0 black; 
 }
 
-
 /*footer palette*/
 .footer_delice{
-    height: 10em;
+    height: 11m;
     background-color: #353539;
     color: #ffffff;
+    padding-left: 1.5em;
+    padding-top: 0.1em;
 }
 
 .footer_delice h2{
@@ -1414,75 +1272,50 @@ header i{
 }
 
 .footer_delice p{
-    font-size: 0.7em;
+    font-size: 0.9em;
     margin: 0.5em;
 }
 
 .footer_delice a{
     text-decoration: none;
     color:#ffffff;
-    font-size: 0.7em;
+    font-size: 0.9em;
 }
 
 .footer_delice i{
     margin-right: 1em;
 }
 
+/* responsive delice*/
 @media screen and (min-width: 768px){
     .img_delice{
         width:100%;
         height: 40em; 
     }
     
-    .delice h2{
-        margin-bottom: 2em;
-    }
-    .restau_delice{
-        padding: 0.5em;
-        border-radius: 0;
-    }
     .composition_menu{
         display: flex;
-        height: 20em;
+        justify-content: center;
     }
-    .composition_menu h3{
-        font-size: 0.9em;
-        margin: 0;
+    .categorie_menu h3{
+        font-size: 1em;
     }
     .categorie_menu{
-        width: 33%;
-        font-size: 0.9em;
+        min-width: 33%;
     }
-
-    .categorie_menu p{
-        font-size: 0.8em;
-    }
-    .commande_delice{
-        margin-bottom: 3em;
+    .delice h2{
+        padding-top: 1em;
     }
 }
-
 
 @media screen and (min-width: 992px){
 
     .img_delice{
         height: 40em;
     }
+
     .composition_menu{
-        width: 100%;
-        height: 15em;
-    }
-
-    .restau_delice{
         padding: 1em;
-        border-radius: 0;
-    }
-
-    .delice h2{
-        padding-top: 0;
-    }
-    .commande_delice{
-        margin-bottom: 3em;
     }
 
 }
